--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "flowbite": "^2.5.2"
     }
 }
