--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "flowbite": "^2.5.2",
+        "simple-datatables": "^9.2.1",
         "sweetalert2": "^11.14.5"
     }
 }
